crates/dag-macros/tests/ui/workflow_if_duplicate_source.stderr
error: [DAG207] duplicate if_! for source `route`
  --> tests/ui/workflow_if_duplicate_source.rs:45:5
   |
45 |     if_!(
   |     ^^^
